--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <h2 class="text-center mt-2">Phone Corner</h2>
+    <div class="container">
+        <div class="d-flex">
+            <input id="search-text" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button  onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
+          </div>
+    </div>
+    <h2 id="error"></h2>
     <!-- link javascript -->
     <script src="js/index.js"></script>
 </body>
