--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button  onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
           </div>
     </div>
-    <h2 id="error"></h2>
+    <h2 id="error" class="text-danger text-center"></h2>
     <!-- link javascript -->
     <script src="js/index.js"></script>
 </body>
