--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-gray">
     <h2 class="text-center mt-2">Phone Corner</h2>
     <div class="container">
         <div class="d-flex">
             <input id="search-text" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button  onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
+            <button  onclick="searchButton()" class="btn btn-outline-primary" type="submit">Search</button>
           </div>
     </div>
     <h2 id="error" class="text-danger text-center"></h2>
+    <!-- show result -->
+    <div class="container">
+        <div id="main" class="row">
+
+        </div>
+    </div>
     <!-- link javascript -->
     <script src="js/index.js"></script>
 </body>
