added main features

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           </div>
     </div>
     <h2 id="error" class="text-danger text-center"></h2>
+    <!-- show phone details -->
+    <div id="show-phone-details" class="d-flex justify-content-center">
+
+    </div>
     <!-- show result -->
     <div class="container">
         <div id="main" class="row">
